--- a/processoSeletivo/cadastro.css
+++ b/processoSeletivo/cadastro.css
@@ -7,14 +7,19 @@
 }
 
 body {
-  background-color: #64d0f4;
+  background-color: #829eba;
   display: flex;
   justify-content: center;
   padding: 40px;
 }
+header {
+  background-color: #495C7E;
+  text-align: center;
+  padding: 20px 0;
+}
 
 .form-container {
-  background-color: #42c7f3;
+  background-color: #A7C4E2;
   padding: 30px 25px;
   border-radius: 15px;
   width: 100%;
@@ -25,7 +30,7 @@ body {
 h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: blue;
+  color: black;
   font-size: 30px;
 }
 
@@ -73,7 +78,7 @@ form select {
 button {
   width: 100%;
   padding: 12px;
-  background-color: #0d09f3;
+  background-color: #495C7E;
   color: #fff;
   border: none;
   border-radius: 12px;
