Atualização da tela cadastro

--- a/processoSeletivo/cadastro.css
+++ b/processoSeletivo/cadastro.css
@@ -7,24 +7,23 @@
 }
 
 body {
-  background-color: #829eba;
-  display: flex;
-  justify-content: center;
-  padding: 40px;
+  background-color: #f4f4f4;
+ 
 }
 header {
   background-color: #495C7E;
   text-align: center;
-  padding: 20px 0;
+  padding: 10px 0;
 }
+
 
 .form-container {
   background-color: #A7C4E2;
-  padding: 30px 25px;
-  border-radius: 15px;
-  width: 100%;
   max-width: 400px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin: 40px auto;
+  padding: 30px;
+  border-radius: 8px;
+  text-align: center;
 }
 
 h2 {
@@ -88,4 +87,42 @@ button {
 
 button:hover {
   background-color: #0d09f3;
+}
+
+.logo{
+  width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover
+}
+
+footer {
+  background-color: #495C7E;
+  color: #fff;
+  padding: 40px 20px 20px;
+  text-align: center;
+}
+
+.footer-logo{
+     width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 10px;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+  margin-bottom: 20px;
+}
+
+footer a {
+  color: #ddd;
+  text-decoration: underline;
+}
+
+footer p {
+  font-size: 14px;
 }
